Support for showDocument LSP callback for local files